# espidf-ogn-tracker

./: .cproject  .project  T-Beam_v10_LCD.cfg  sdkconfig  sdkconfig.old
components/flash_storage/: CMakeLists.txt  nvs_utils.c  nvs_utils.h
components/network/: CMakeLists.txt  http_server.c  http_server.h  tasks_common.h  wifi_app.c  wifi_app.h
components/network/webpage/: app.css  app.js  index.html
components/wrappers/: CMakeLists.txt  parameters_wrapper.cpp  parameters_wrapper.h
main/: CMakeLists.txt  config.h  disp.cpp  disp_oled.cpp  disp_oled.h  main.cpp  parameters_wrapper.h
